docs: a Go fcdev on the PATH shadows the Java one — the wrapper to use
Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>